--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,12 @@
     "require": {
         "slim/slim": "^3.9",
         "monolog/monolog": "^1.23",
-        "slim/php-view": "^2.2"
+        "slim/php-view": "^2.2",
+		"j4mie/idiorm": "1.5.5"
     },
     "autoload": {
         "psr-4": {
-            "": "classes/"
+            "": "controllers/"
         }
     }
 }
